# vibestorm

./: .gitignore  AGENTS.md  README.md  SIGNAL_LOG.md  local.sh  opengrid.sh  opensim.sh  project_goal.md  projectstate.md  pyproject.toml  run.sh  sl.sh
docs/: README.md  birds-eye-2d-plan.md  brain-board-2026-04-02T164501Z.md  claude-handoff-2026-04-04.md  current-handoff.md  handoff-2026-04-02T165300Z.md  handoff-2026-04-02T194900Z.md  handoff-2026-04-03T000000Z.md  handoff-template.md  language-selection-record-2026-04-02T164311Z.md  local-opensim-host-2026-04-02T170452Z.md  local-opensim.md  opensim-source-map.md  opensim-udp-reference.md  plan-2026-04-02T164202Z.md  project-progress-2026-04-02T170452Z.md  project-progress-2026-04-03T102131Z.md  project-progress-2026-04-03T105043Z.md  protocol-hypothesis.md  protocol-research.md  publishing-checklist.md  python-library-selection-2026-04-02T164501Z.md  reverse-engineered-protocol.md  viewer-3d-plan.md  viewer-architecture.md  viewer-help.md  viewer-phases.md
spec/: capability-coverage.md  message-coverage.md
test/: test_asset_upload_client.py  test_assets_j2k.py  test_bus.py  test_caps_client.py  test_caps_llsd.py  test_cli.py  test_cli_session_report.py  test_credentials.py  test_event_queue_client.py  test_event_queue_events.py  test_event_queue_runtime.py  test_fixture_inventory.py  test_get_mesh_client.py  test_get_texture_client.py  test_inventory_caps_client.py  test_login_client.py  test_login_screen.py  test_object_inventory.py  test_sculpt.py  test_sl_mesh.py  test_task_inventory_upload_client.py  (+31 more)
(+141 files in other folders)
