[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "vibestorm"
version = "0.1.0"
description = "A staged Second Life client project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27,<1",
]

[project.optional-dependencies]
viewer = [
  "Pillow>=10,<12",
]
dev = [
  "mypy>=1.10,<2",
  "Pillow>=10,<12",
  "pytest>=8.2,<9",
  "pytest-asyncio>=0.23,<1",
  "pytest-cov>=5,<6",
  "ruff>=0.4,<1",
]

[project.scripts]
vibestorm = "vibestorm.app.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["test"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
packages = ["vibestorm"]
strict = true

